# bookstore-textual

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
bookstore_textual/: __init__.py  app.css  config.py  main.py
bookstore_textual/api/: book_api.py
bookstore_textual/db/: __init__.py  book.py
bookstore_textual/schemas/: __init__.py  bookstore.py
bookstore_textual/utils/: log.py  textual.py
bookstore_textual/widgets/: __init__.py  login.py  quit.py  sidebar.py
bookstore_textual/widgets/body/: entry.py
data/: .gitkeep
